manifests/headlamp/postinstall/overlays/lab/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-server-routing-dashboard
  namespace: headlamp
spec:
  parentRefs:
  - name: clusteringress-frontdoor
    sectionName: https
    namespace: gatewayapi
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - headlamp.lab.hunt.internal
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: headlamp
      port: 443
      weight: 1
      kind: Service
